--- a/assets/index.css
+++ b/assets/index.css
@@ -1,4 +1,5 @@
-#container {
+#container,
+#dynamicHTML {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +20,8 @@
   text-align: center;
 }
 
-.calendarContainer > div {
+.calendarContainer > div,
+.dayClass {
   height: 5rem;
   width: 5rem;
   background-color: white;
